public class Car{
    public String licensePlateID;
    public float weight;
    public float value;
}