public class Chassis {
    public double stiffness;   
}
