public class Driver extends Human{
    public int age;
    public int name;
    
    public void drive(Car car){

    }
}
