
public class GarageStaff extends Human {
    public int age;
    public String name;

    public void cleanGarage(OttoGarage garage){

    }

    public void fixTicket(Ticket ticket){
        
    }
   
}
