public abstract class Human {
    public int age;
    pubic String name;

    
}
