public class Motor {
    public int horsepower;
    
}
