public class SteeringWheel {
    public double diameter;
}
