public class Tire {
    public String identification;
    public double wear;
    
}
