@startuml ottopark
 class Car{
     + string licensePlateID
     + float weight
     + float value
 }

 class Ticket{
     + int level
     + int position
     + Car car 
 }

class GarageManagement{
    - int levels
    - int positionsPerLevel
    - Ticket[][] garage

    + Ticket depositCar(String licensePlateID)
    + bool pickupCar(Ticket ticket)
    + void printTickets()
    - bool emptySpotExists()
}

class OttoGarage{
    - int levels
    - int positionsPerLevel
    - Ticket[] slots

    + OttoGarage()
    + Ticket depositCar(Car car)
    + bool pickupCar(Ticket ticket)
    + ArrayList<Car> getAllCars()
    + void printTickets()
    + int getNextFreeSlot()
}

class GarageAllocationAnalyzer{
    - Comparator<Car> comparator
    - IGarageManagement garage
    + GarageAllocationAnalyzer(Comparator<Car> comparator, IGarageManagement garage)
    + void outputConsole()
}

interface IGarageManagement{
    + Ticket depositCar(Car car)
    + bool pickupCar(Ticket ticket)
    + void printTickets()
    + ArrayList<Car> getAllCars()
}

class Driver{
    + int age
    + string name
    + void drive(Car car)
}

abstract class Human{
    + int age
    + int Name
}

class GarageStaff{
    + int age
    + string name
    + void cleanGarage(OttoGarage garage)
    + void fixTicket(Ticket ticket)
}

class Motor{
    + int horsepower
}

class Chassis{
    + double stiffness

}

class Tire{
    + string identification
    + double wear

}

class SteeringWheel{
    + double diameter
}


OttoGarage --|> IGarageManagement
OttoGarage "0..*" -- "0..1" Car : "depositedAt"
OttoGarage "0..*" -- "1" Ticket : "emittedAt"
Car -- Ticket
GarageManagement -- Ticket
IGarageManagement -- Ticket
IGarageManagement -- Car
GarageAllocationAnalyzer <--x Car
Driver "0..*" -- "1..*" Car : "drives"
Driver --|> Human
GarageStaff --|> Human
GarageStaff "5..10" -- "1" OttoGarage : "worksAt"
IGarageManagement "1" -- "1" GarageAllocationAnalyzer
Car *-- Tire
Car *-- SteeringWheel
Car *-- Motor
Car *-- Chassis
@enduml